add typescript and upgrade babel

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,10 @@
 {
-  "presets": ["env"],
+  "presets": [
+    "@babel/env",
+    "@babel/typescript"
+  ],
   "plugins": [
-    "transform-class-properties",
-    "transform-object-rest-spread"
+    "@babel/proposal-class-properties",
+    "@babel/proposal-object-rest-spread"
   ]
 }
