--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "precommit": "lint-staged",
-    "babel": "./node_modules/.bin/babel src -d dist"
+    "babel": "./node_modules/.bin/babel src -d dist",
+    "test": "jasmine JASMINE_CONFIG_PATH=spec/jasmine.json"
   },
   "lint-staged": {
     "src/**/*.js": [
@@ -30,12 +31,14 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^2.6.2",
     "husky": "^0.14.3",
+    "jasmine": "^3.2.0",
     "lint-staged": "^7.2.2",
     "prettier": "^1.14.2"
   }
